--- a/UI-control/src/app/control/control.component.html
+++ b/UI-control/src/app/control/control.component.html
@@ -2,24 +2,24 @@
 <div class="container">
   <div class="row">
     <div class="col-md-4 col-4">
-      <button class="button">Acelerar</button>
+      <button class="button" (click)="accel()">Acelerar</button>
     </div>
     <div class="col-md-4 col-4">
-      <button class="button">Play/Pause</button>
+      <button class="button" (click)="play()">Play/Pause</button>
     </div>
     <div class="col-md-4 col-4">
-      <button class="button">Rotar</button>
+      <button class="button" (click)="rotate()">Rotar</button>
     </div>
   </div>
   <div class="row">
     <div class="col-md-4 col-4">
-      <button class="button"><</button>
+      <button class="button" (click)="left()"><</button>
     </div>
     <div class="col-md-4 col-4">
-      <button class="button">Reiniciar</button>
+      <button class="button" (click)="reboot()">Reiniciar</button>
     </div>
     <div class="col-md-4 col-4">
-      <button class="button">></button>
+      <button class="button" (click)="right()">></button>
     </div>
   </div>
   
