Agregado bootstrap  y algo de estilo

--- a/UI-control/src/app/control/control.component.html
+++ b/UI-control/src/app/control/control.component.html
@@ -1,25 +1,25 @@
 <br>
-<div class="container">
+<div class="container-fluid">
   <div class="row">
     <div class="col-md-4 col-4">
-      <button class="button" (click)="accel()">Acelerar</button>
+      <button class="button text-primary" (click)="accel()" title="Acelerar caída"><i class="fa fa-chevron-down"></i></button>
     </div>
     <div class="col-md-4 col-4">
-      <button class="button" (click)="play()">Play/Pause</button>
+      <button class="button text-primary" (click)="play()" title="Iniciar/Pausar"><i class="fa fa-play-circle-o"></i>/<i class="fa fa-pause-circle-o"></i></button>
     </div>
     <div class="col-md-4 col-4">
-      <button class="button" (click)="rotate()">Rotar</button>
+      <button class="button text-primary" (click)="rotate()" title="Rotar"><i class="fa fa-refresh"></i></button>
     </div>
   </div>
   <div class="row">
     <div class="col-md-4 col-4">
-      <button class="button" (click)="left()"><</button>
+      <button class="button text-primary" (click)="left()" title="Mover izquierda"><i class="fa fa-chevron-left"></i></button>
     </div>
     <div class="col-md-4 col-4">
-      <button class="button" (click)="reboot()">Reiniciar</button>
+      <button class="button text-primary" (click)="reboot()" title="Reiniciar"><i class="fa fa-history"></i></button>
     </div>
     <div class="col-md-4 col-4">
-      <button class="button" (click)="right()">></button>
+      <button class="button text-primary" (click)="right()" title="Mover derecha"><i class="fa fa-chevron-right"></i></button>
     </div>
   </div>
   
