--- a/UI-control/src/app/control/control.component.css
+++ b/UI-control/src/app/control/control.component.css
@@ -1,5 +1,44 @@
-button{
+/* button{
     width: 100%;
     height: 8em;
     margin: 3%;
-}
+} */
+
+/* @import 'nib'; */
+
+body {
+    margin: 0;
+    background: #1e90ff;
+    height: 100vh;
+    display: -ms-flexbox;
+    display: box;
+    display: flex;
+    -o-box-pack: center;
+    justify-content: center;
+    -o-box-align: center;
+    align-items: center;
+  }
+  button {
+    background-color: #fff;
+    border: 0;
+    outline: 0;
+    padding: 1.5rem 2rem;
+    font-size: 4rem;
+    font-family: monospace;
+    box-shadow: 0px 5px 10px #0057ab;
+    transition: all 0.3s;
+    cursor: pointer;
+    border-radius: 100%;
+    border-bottom: 4px solid #d9d9d9;
+  }
+  /* button:hover {
+    box-shadow: 0px 15px 25px -5px #0057ab;
+    -webkit-transform: scale(1.03);
+    transform: scale(1.03);
+  } */
+  button:active {
+    box-shadow: 0px 4px 8px #0065c8;
+    -webkit-transform: scale(0.98);
+    transform: scale(0.95);
+  }
+    
