--- a/UI-control/src/app/control/control.component.html
+++ b/UI-control/src/app/control/control.component.html
@@ -1,24 +1,24 @@
 <br>
 <div class="container-fluid">
-  <div class="row">
-    <div class="col-md-4 col-4">
-      <button class="button text-primary" (click)="accel()" title="Acelerar caída"><i class="fa fa-chevron-down"></i></button>
-    </div>
-    <div class="col-md-4 col-4">
-      <button class="button text-primary" (click)="play()" title="Iniciar/Pausar"><i class="fa fa-play-circle-o"></i>/<i class="fa fa-pause-circle-o"></i></button>
-    </div>
-    <div class="col-md-4 col-4">
-      <button class="button text-primary" (click)="rotate()" title="Rotar"><i class="fa fa-refresh"></i></button>
+  <div class="d-flex justify-content-center bd-highlight mb-3">
+      <div class="">
+        <button class="button text-primary mx-4" (click)="reboot()" title="Reiniciar"><i class="fa fa-history"></i></button>
+      </div>
+    <div class="">
+      <button class="button text-primary mx-4" (click)="play()" title="Iniciar/Pausar" style="border-radius: 20%;"><i class="fa fa-play-circle-o"></i>/<i class="fa fa-pause-circle-o"></i></button>
     </div>
   </div>
-  <div class="row">
-    <div class="col-md-4 col-4">
+  <div class="d-flex justify-content-between bd-highlight mb-3">
+    <div class="">
       <button class="button text-primary" (click)="left()" title="Mover izquierda"><i class="fa fa-chevron-left"></i></button>
     </div>
-    <div class="col-md-4 col-4">
-      <button class="button text-primary" (click)="reboot()" title="Reiniciar"><i class="fa fa-history"></i></button>
+    <div class="">
+      <button class="button text-primary" (click)="accel()" title="Acelerar caída" style="margin-top: 40%;"><i class="fa fa-chevron-down"></i></button>
     </div>
-    <div class="col-md-4 col-4">
+    <div class="">
+      <button class="button text-primary" (click)="rotate()" title="Rotar" style="margin-top: 40%;"><i class="fa fa-refresh"></i></button>
+    </div>
+    <div class="">
       <button class="button text-primary" (click)="right()" title="Mover derecha"><i class="fa fa-chevron-right"></i></button>
     </div>
   </div>
