Funcionalidad de selección de color para cada led

--- a/UI-control-2/src/app/components/select-color/select-color.component.html
+++ b/UI-control-2/src/app/components/select-color/select-color.component.html
@@ -1,24 +1,24 @@
-<div class="px-3 pt-3 pb-1">
+<div class="px-3 pt-3 pb-3">
   
-  <ion-item button (click)="setColor()">
+  <ion-item button (click)="setColor('k')">
     <ion-avatar slot="start">
       <ion-icon color="dark" name="flashlight" style="font-size: 25px;"></ion-icon>
     </ion-avatar>
     <h6>Apagado</h6>
   </ion-item>
-  <ion-item button (click)="setColor()">
+  <ion-item button (click)="setColor('r')">
     <ion-avatar slot="start">
       <ion-icon color="danger" name="flashlight" style="font-size: 25px;"></ion-icon>
     </ion-avatar>
     <h6>Rojo</h6>
   </ion-item>
-  <ion-item button (click)="setColor()">
+  <ion-item button (click)="setColor('g')">
     <ion-avatar slot="start">
       <ion-icon color="success" name="flashlight" style="font-size: 25px;"></ion-icon>
     </ion-avatar>
     <h6>Verde</h6>
   </ion-item>
-  <ion-item button (click)="setColor()">
+  <ion-item button (click)="setColor('b')">
     <ion-avatar slot="start">
       <ion-icon color="primary" name="flashlight" style="font-size: 25px;"></ion-icon>
     </ion-avatar>
