--- a/UI-control-2/src/app/pages/draw/draw.page.html
+++ b/UI-control-2/src/app/pages/draw/draw.page.html
@@ -7,18 +7,22 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content class="ion-padding">
+<ion-content id="gg" class="ion-padding">
 
   <table class="table table-responsive d-flex justify-content-center">
     <tbody class="">
       <tr *ngFor="let row of draw_matrix; let i=index">
         <td *ngFor="let col of row; let j=index" class="p-0">
-          <a (click)="selectColor(event, i, j)">
-            <ion-icon color="dark" name="flashlight" style="font-size: 30px; margin: -2.2px 0px;"></ion-icon>
+          <a button (click)="selectColor(event, i, j)">
+            <ion-icon [color]="getColor(i, j)" name="flashlight" style="font-size: 30px; margin: -2.2px 0px;"></ion-icon>
           </a>
         </td>
       </tr>
     </tbody>
   </table>
+
+  <ion-button color="warning" expand="block">
+    Imprimir Dibujo
+  </ion-button>
 
 </ion-content>
