Servicio de envio de matriz de leds

--- a/UI-control-2/src/app/pages/control/control.page.html
+++ b/UI-control-2/src/app/pages/control/control.page.html
@@ -7,10 +7,10 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content class="ion-padding" id="body-control">
+<ion-content class="" id="body-control">
   
-  <div class="container-fluid table-responsive">
-    <div class="d-flex justify-content-center bd-highlight mb-3">
+  <div class="container-fluid table-responsive my-1 px-5">
+    <div class="d-flex justify-content-center bd-highlight mb-3 mx-4">
         <div class="">
           <button class="button text-primary mx-4" (click)="reboot()" title="Reiniciar"><i class="fa fa-history"></i></button>
         </div>
@@ -23,10 +23,10 @@
         <button class="button text-primary" (click)="left()" title="Mover izquierda"><i class="fa fa-chevron-left"></i></button>
       </div>
       <div class="">
-        <button class="button text-primary" (click)="accel()" title="Acelerar caída" style="margin-top: 40%;"><i class="fa fa-chevron-down"></i></button>
+        <button class="button text-primary" (click)="accel()" title="Acelerar caída" style="margin-top: 30%;"><i class="fa fa-chevron-down"></i></button>
       </div>
       <div class="">
-        <button class="button text-primary" (click)="rotate()" title="Rotar" style="margin-top: 40%;"><i class="fa fa-refresh"></i></button>
+        <button class="button text-primary" (click)="rotate()" title="Rotar" style="margin-top: 30%;"><i class="fa fa-refresh"></i></button>
       </div>
       <div class="">
         <button class="button text-primary" (click)="right()" title="Mover derecha"><i class="fa fa-chevron-right"></i></button>
