--- a/UI-control-2/src/app/pages/draw/draw.page.html
+++ b/UI-control-2/src/app/pages/draw/draw.page.html
@@ -21,7 +21,7 @@
     </tbody>
   </table>
 
-  <ion-button color="warning" expand="block">
+  <ion-button color="warning" expand="block" (click)="sendKeys()">
     Imprimir Dibujo
   </ion-button>
 
