--- a/UI-control-2/src/app/pages/control/control.page.scss
+++ b/UI-control-2/src/app/pages/control/control.page.scss
@@ -1,9 +1,9 @@
 button {
-    margin-top: 0px;
+    margin: 0px;
     background-color: rgb(210, 229, 221);
     border: 0;
     outline: 0;
-    padding: 1.2rem 2.5rem;
+    padding: 1.0rem 1.75rem;
     font-size: 2.0rem;
     text-align: center;
     box-shadow: 0px 5px 10px #0057ab;
